CD bug fix